refactor: organize the settings
