# app/routes/__init__.py
@@ -1,0 +1,5 @@
+from app.routes.company_routes import company_bp
+
+
+def init_app(app):
+    app.register_blueprint(company_bp, url_prefix="/companies")
